style touch-up, gradient BG, fixed flex positioning and chopped down margin overlaps

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,11 +72,21 @@ html, body {
  #___gatsby, #gatsby-focus-wrapper {
   @apply min-h-screen text-white;
 }
-
+@keyframes BGgradient{
+  0% {background-position: 0 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0 50%;}
+}
 #gatsby-focus-wrapper{ 
-  @apply flex flex-col;
-  background-color: #252525;
-  /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23ff8700' fill-opacity='1'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
+  /* @apply flex flex-col; */
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(-45deg,#000,#333,#111,#333,#000);
+  background-size: 200% 200%;
+  animation: BGgradient 14s ease-in-out infinite;
+  max-width: 100vw;
+  min-height: 100vh;
+  overflow: auto;
 }
 @tailwind components;
 @tailwind utilities;
